[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["vojtech.riedl <vojtariedl66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pymysql = "^1.1.1"
fastapi-mqtt = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
